syntax = "proto3";

option csharp_namespace = "ResultsService.Protos";

package product;

service Product {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
}

message DeleteProductRequest {
  string id = 1;
}

message GetProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message UpdateProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message CreateProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message DeleteProductResponse {
  string id = 1;
}